tests/files/flow_controller_tests/should_run/063.cmdr
x = 3.14;
print ceil(x);