tests/files/flow_controller_tests/should_fail/099.cmdr
x = false;
print arccosh(x);